# realtime-coin-counter-svm-cht

./: .gitignore  CMakeLists.txt  README.md  build_with_torch.sh  coin_cnn.pt  coin_cnn_training.ipynb  coin_counter_gui_tune.py  debug_coin_detection.py  debug_paper_detection.py  export_torchscript.py  requirements_dl.txt  train_classifier.py
include/: calibration.hpp  coin_detector.hpp  coin_track.hpp  coin_tracker.hpp  config.hpp  corner_stabilizer.hpp  svm_classifier.hpp  torch_classifier.hpp  types.hpp
src/: calibration.cpp  coin_detector.cpp  coin_track.cpp  coin_tracker.cpp  corner_stabilizer.cpp  main_camera_calibration.cpp  main_coin_counter.cpp  main_coin_counter_dl.cpp  main_train_acquisition.cpp  main_train_svm.cpp  svm_classifier.cpp  torch_classifier.cpp
